--- a/composer.json
+++ b/composer.json
@@ -16,9 +16,13 @@
     "require": {
         "php": ">=7.4.0",
         "yiisoft/yii2": "~2.0.45",
-        "yiisoft/yii2-bootstrap5": "~2.0.2",
         "yiisoft/yii2-symfonymailer": "~2.0.3",
-        "yiisoft/yii2-jui": "2.0.7"
+        "yiisoft/yii2-jui": "2.0.7",
+        "kartik-v/yii2-widget-datepicker": "dev-master",
+        "yiisoft/yii2-bootstrap5": "@dev",
+        "kartik-v/yii2-widget-select2": "dev-master",
+        "kartik-v/yii2-date-range": "dev-master"
+
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.1.0",
